--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "rollup-plugin-copy": "^3.5.0",
         "sweetalert2": "^11.6.13",
         "vue-chartjs": "^5.3.1",
-        "vue-timeago3": "^2.3.2"
+        "vue-timeago3": "^2.3.2",
+        "vue3-pdf-app": "^1.0.3"
     }
 }
